GNOME Bugzilla – Bug 781254
Fix build with GMime 3.0
Last modified: 2017-04-13 10:31:52 UTC
This is breaking the build in GNOME Continuous. GMime 3.0 has a different API in master, as expected for a major version bump. Grilo-plugins depends on totem-pl-parser and gmime; as of commit https://git.gnome.org/browse/grilo-plugins/commit/?id=4329dda2c53f9a7bd2a3f6dd9334d4eb5207e9fd, grilo-plugins *only* support gmime-3.0. Totem-pl-parser, on the other hand, builds with GMime 2.6 by default, if found on the system, and then falls back to GMime 3.0. This means that totem-pl-parser will build correctly, but break the build of totem-pl-parser, since you cannot depend on both gmime 2.6 and gmime 3.0 without symbol/type collisions.
Created attachment 349774 [details] [review] Allow detecting the GMime API we are building against Since we support GMime 2.6 and 3.0, and there are going to be API differences between the two, we will need a way to check which version of GMime we are building against from inside the code.
Created attachment 349775 [details] [review] Fix build with GMime 3.0 The g_mime_utils_header_decode_date() function changed in GMime 3.0: it now takes a single argument, and generates a GDateTime instead of a Unix timestamp.
Created attachment 349776 [details] [review] Prefer GMime 3.0 instead of GMime 2.6
Created attachment 349781 [details] [review] build: Allow detecting the GMime API we are building against Since we support GMime 2.6 and 3.0, and there are going to be API differences between the two, we will need a way to check which version of GMime we are building against from inside the code.
Created attachment 349782 [details] [review] build: Fix build with GMime 3.0 The g_mime_utils_header_decode_date() function changed in GMime 3.0: it now takes a single argument, and generates a GDateTime instead of a Unix timestamp.
Created attachment 349783 [details] [review] build: Prefer GMime 3.0 instead of GMime 2.6
All pushed. I fixed the typo in the first commit, and added a return check to the GMime 3.0 API use. Attachment 349781 [details] pushed as 972138e - build: Allow detecting the GMime API we are building against Attachment 349782 [details] pushed as 08f6a2f - build: Fix build with GMime 3.0 Attachment 349783 [details] pushed as cb34f1e - build: Prefer GMime 3.0 instead of GMime 2.6