build: Fix build with GMime 3.0

The g_mime_utils_header_decode_date() function changed in GMime 3.0: it
now takes a single argument, and generates a GDateTime instead of a Unix
timestamp.

https://bugzilla.gnome.org/show_bug.cgi?id=781254